# financify_data_processor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: poetry_run_tox.yml  pr_ci.yml
financify_data_processor/: __ci__.py  __example__.py  __main__.py
financify_data_processor/config/: mysql_cfg.py
